added projects, created basic implementation of logger

--- a/WebApplication/Properties/launchSettings.json
+++ b/WebApplication/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:57792/",
+      "applicationUrl": "http://localhost:59555/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SprinterraTestAssignment": {
+    "WebApplication": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:57793/"
+      "applicationUrl": "http://localhost:59556/"
     }
   }
 }
